# MisogiAI

./: MISOGI_Exploratory_Data_Analysis.ipynb  MISOGI_Exploratory_Data_Analysis_Q2.ipynb  MISOGI_Exploratory_Data_Analysis_Q3.ipynb
Data-struture-in-Python/: Q10.py  Q11.py  Q12.py  Q13.py  Q14.py  Q15.py  Q16.py  Q17.py  Q18.py  Q6.py  Q7.py  Q8.py  Q9.py
Intro to FAST API/Q1/: main.py
Intro to FAST API/Q2/: README.md  crud.py  database.py  expenses.db  main.py  models.py  requirements.txt  schemas.py
Intro to FAST API/Q3/: README.md  requirements.txt  ticket_booking.db
Intro-to-Python/: Q12.py  Q13.py  Q14.py  Q15.py  Q16.py  Q17.py  Q18.py  Q19.py  Q20.py  Q21.py
ML-By-Aman-Bansal/: assignment.ipynb  lecture-4.ipynb  linear_regression.ipynb  practice.ipynb  pyproject.toml
ML-By-Aman-Bansal/lecture-2/: app.ipynb  assignment.ipynb  main.py  pyproject.toml
ML-By-Aman-Bansal/lecture-2/.ipynb_checkpoints/: app-checkpoint.ipynb
Math-Behind-ML/: Q1.py  Q2.py  Q3.py  Q4.py
OOPs-Advanced-Concepts/: Q1.py  Q2.py  Q3.py  Q4.py
OOPs-in-Python/: Q4.py  Q5.py  Q6.py  Q7.py  Q8.py  Q9.py
Pydantic+Database/: README.md  README_V1_REDIS_CACHE.md  demo_api.py  demo_order_management.py  dump.rdb  requirements.txt  restaurant_api_v1_manual_cache.py  restaurant_menu_api.py  setup.sh  test_order_validations.py  test_validations.py
Revisiting-CRUD/: Q1.py
W2D3/Q1/: README.md  (+1 more)
W3D2/: README.md  compare_models.py  input.json  results.json
code-agent/: README.md  package-lock.json  package.json
python-eval-oct-28/: 2.py  4.py  5.py  7.py  9.py  report.txt  sales.json
(+337 files in other folders)
